OTA大文件传输

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
             android:name=".activity.DeviceOperationActivity"/>
 
         <activity
+            android:name=".activity.OTABigDataActivity"/>
+
+        <activity
             android:name=".activity.OTAActivity"/>
 
     </application>
