--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity
             android:name=".activity.OTAActivity"/>
 
+        <activity
+            android:name=".activity.DialCustomActivity"/>
+
     </application>
 
 </manifest>
